// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
Array [
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"daily\\"})",
    "value": "daily",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"weekly\\"})",
    "value": "weekly",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"monthly\\"})",
    "value": "monthly",
  },
  Object {
    "selected": false,
    "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"quarterly\\"})",
    "value": "quarterly",
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with component: dispatch granularity, component 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": undefined,
      },
      Object {
        "granularity": "daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": undefined,
      },
      Object {
        "beginning": "2019-06-20T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": undefined,
      },
      Object {
        "ending": "2019-07-20T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with hook: dispatch granularity, hook 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      Object {
        "granularity": "dolor sit",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "loremIpsum",
      },
      Object {
        "beginning": "2019-06-20T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "loremIpsum",
      },
      Object {
        "ending": "2019-07-20T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldGranularity"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  options={
    Array [
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"daily\\"})",
        "value": "daily",
      },
      Object {
        "selected": true,
        "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"weekly\\"})",
        "value": "weekly",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"monthly\\"})",
        "value": "monthly",
      },
      Object {
        "selected": false,
        "title": "t(curiosity-toolbar.granularity, {\\"context\\":\\"quarterly\\"})",
        "value": "quarterly",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"granularity\\"})"
  position="left"
  selectedOptions="weekly"
  toggleIcon={null}
  variant="single"
/>
`;
